Tien sua them sinh vien

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/MainController/Login.java=UTF-8
+encoding//src/MainController/StudentController.java=UTF-8
+encoding//src/MainController/TieuBanController.java=UTF-8
