--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,7 @@
 eclipse.preferences.version=1
 encoding//WebContent/WEB-INF/views/teacher/insert.jsp=UTF-8
 encoding//src/MainController/ChoseGVPB.java=UTF-8
+encoding//src/MainController/Statistic.java=UTF-8
 encoding//src/MainController/StudentController.java=UTF-8
 encoding//src/MainController/TeacherController.java=UTF-8
 encoding//src/MainController/TieuBanController.java=UTF-8
